Creation of the openapi contract , controller service and repository of the entity Supervisor, and test of endpoints
